@@ -26,7 +26,7 @@ package com.oracle.svm.core.jdk;
 
 import java.util.Map;
 
-import com.oracle.svm.core.NeverInline;
+import com.oracle.svm.shared.NeverInline;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.Alias;
 import com.oracle.svm.core.annotate.Delete;
@@ -35,7 +35,8 @@ import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
-import com.oracle.svm.core.snippets.KnownIntrinsics;
+import com.oracle.svm.guest.staging.core.graal.KnownIntrinsics;
+import com.oracle.svm.guest.staging.ArgsSupport;
 
 @TargetClass(className = "jdk.internal.misc.VM")
 public final class Target_jdk_internal_misc_VM {
@@ -53,6 +54,18 @@ public final class Target_jdk_internal_misc_VM {
     public static ClassLoader latestUserDefinedLoader0() {
         return StackTraceUtils.latestUserDefinedClassLoader(KnownIntrinsics.readCallerStackPointer());
     }
+
+    @Substitute
+    public static String[] getRuntimeArguments() {
+        /*
+         * This method is called by SourceLauncher to find arguments that the java launcher usually
+         * gives to the JVM rather than the application (--add-exports, --add-opens, etc).
+         */
+        return ArgsSupport.singleton().getInitialArgs();
+    }
+
+    @Alias
+    public static native boolean isBooted();
 
     /*
      * Finalizers are not supported, but we still do not want to inherit any counters from the image
