@@ -33,7 +33,6 @@ import static com.oracle.svm.core.jfr.JfrArgumentParser.parseMaxSize;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 import org.graalvm.nativeimage.ImageSingletons;
@@ -41,13 +40,18 @@ import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 
 import com.oracle.svm.core.SubstrateOptions;
-import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.jdk.RuntimeSupport;
+import com.oracle.svm.guest.staging.jdk.RuntimeSupport;
 import com.oracle.svm.core.jfr.JfrArgumentParser.FlightRecorderOptionsArgument;
 import com.oracle.svm.core.jfr.JfrArgumentParser.JfrArgument;
 import com.oracle.svm.core.jfr.events.EndChunkNativePeriodicEvents;
 import com.oracle.svm.core.jfr.events.EveryChunkNativePeriodicEvents;
-import com.oracle.svm.core.util.BasedOnJDKFile;
+import com.oracle.svm.shared.singletons.traits.BuiltinTraits.AllAccess;
+import com.oracle.svm.shared.singletons.traits.BuiltinTraits.NoLayeredCallbacks;
+import com.oracle.svm.shared.singletons.traits.BuiltinTraits.PartiallyLayerAware;
+import com.oracle.svm.shared.singletons.traits.SingletonLayeredInstallationKind.Duplicable;
+import com.oracle.svm.shared.singletons.traits.SingletonTraits;
+import com.oracle.svm.shared.util.BasedOnJDKFile;
+import com.oracle.svm.shared.util.SubstrateUtil;
 
 import jdk.graal.compiler.api.replacements.Fold;
 import jdk.jfr.FlightRecorder;
@@ -60,6 +64,7 @@ import jdk.jfr.internal.Repository;
 /**
  * Called during VM startup and teardown. Also triggers the JFR argument parsing.
  */
+@SingletonTraits(access = AllAccess.class, layeredCallbacks = NoLayeredCallbacks.class, layeredInstallationKind = Duplicable.class, other = PartiallyLayerAware.class)
 public class JfrManager {
 
     @Platforms(Platform.HOSTED_ONLY.class) //
@@ -104,6 +109,7 @@ public class JfrManager {
         Integer stackDepth = parseInteger(optionsArgs, FlightRecorderOptionsArgument.StackDepth);
         Boolean preserveRepository = parseBoolean(optionsArgs, FlightRecorderOptionsArgument.PreserveRepository);
         Long threadBufferSize = parseMaxSize(optionsArgs, FlightRecorderOptionsArgument.ThreadBufferSize);
+        String dumpPath = optionsArgs.get(FlightRecorderOptionsArgument.DumpPath);
 
         if (globalBufferSize != null) {
             Options.setGlobalBufferSize(globalBufferSize);
@@ -144,18 +150,29 @@ public class JfrManager {
         if (threadBufferSize != null) {
             Options.setThreadBufferSize(threadBufferSize);
         }
+
+        try {
+            if (dumpPath != null) {
+                Options.setDumpPath(Path.of(dumpPath));
+            } else {
+                Options.setDumpPath(null);
+            }
+        } catch (Throwable e) {
+            throw new JfrArgumentParsingFailed("Could not use " + dumpPath + " as emergency dump path. " + e.getMessage(), e);
+        }
     }
 
     private static void setRepositoryBasePath(String repositoryPath) throws IOException {
-        Path path = Paths.get(repositoryPath);
+        Path path = Path.of(repositoryPath);
         SubstrateUtil.cast(Repository.getRepository(), Target_jdk_jfr_internal_Repository.class).setBasePath(path);
     }
 
-    public static RuntimeSupport.Hook shutdownHook() {
+    public static RuntimeSupport.Hook teardownHook() {
         return _ -> {
             /*
-             * Everything should already have been torn down by JVM.destroyJFR(), which is called in
-             * a shutdown hook. So in this method we should only unregister periodic events.
+             * Remove the Native Image specific periodic events that were registered in the startup
+             * hook. The actual JFR shutdown happens in a JDK shutdown hook that stops recording
+             * and that calls JVM.destroyJFR() eventually.
              */
             FlightRecorder.removePeriodicEvent(EveryChunkNativePeriodicEvents::emit);
             FlightRecorder.removePeriodicEvent(EndChunkNativePeriodicEvents::emit);
@@ -174,9 +191,9 @@ public class JfrManager {
         FlightRecorder.addPeriodicEvent(EndChunkNativePeriodicEvents.class, EndChunkNativePeriodicEvents::emit);
     }
 
-    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L219-L247")
-    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L146-L180")
-    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L130-L144")
+    @BasedOnJDKFile("https://github.com/graalvm/labs-openjdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L219-L247")
+    @BasedOnJDKFile("https://github.com/graalvm/labs-openjdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L146-L180")
+    @BasedOnJDKFile("https://github.com/graalvm/labs-openjdk/blob/jdk-24+18/src/hotspot/share/jfr/dcmd/jfrDcmds.cpp#L130-L144")
     private static void initRecording() {
         Target_jdk_jfr_internal_dcmd_DCmdStart cmd = new Target_jdk_jfr_internal_dcmd_DCmdStart();
         String[] result = SubstrateUtil.cast(cmd, Target_jdk_jfr_internal_dcmd_AbstractDCmd.class).execute("internal", SubstrateOptions.StartFlightRecording.getValue(), ',');
