@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,6 +28,7 @@ import static jdk.graal.compiler.util.Digest.DigestBuilder;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.lang.module.Configuration;
 import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
@@ -36,6 +37,7 @@ import java.lang.module.ModuleReader;
 import java.lang.module.ModuleReference;
 import java.lang.module.ResolvedModule;
 import java.lang.reflect.Method;
+import java.lang.reflect.Proxy;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -59,7 +61,6 @@ import java.util.Comparator;
 import java.util.Deque;
 import java.util.EnumSet;
 import java.util.Enumeration;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -84,40 +85,51 @@ import java.util.zip.ZipFile;
 
 import org.graalvm.collections.EconomicMap;
 import org.graalvm.collections.EconomicSet;
-import org.graalvm.collections.MapCursor;
+import org.graalvm.collections.Equivalence;
+import org.graalvm.collections.UnmodifiableEconomicSet;
 import org.graalvm.nativeimage.impl.AnnotationExtractor;
 import org.graalvm.nativeimage.libgraal.hosted.LibGraalLoader;
 
 import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.SharedConstants;
 import com.oracle.svm.core.SubstrateOptions;
-import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.option.AccumulatingLocatableMultiOptionValue;
-import com.oracle.svm.core.option.HostedOptionKey;
-import com.oracle.svm.core.option.LocatableMultiOptionValue.ValueWithOrigin;
-import com.oracle.svm.core.option.OptionOrigin;
-import com.oracle.svm.core.option.SubstrateOptionsParser;
+import com.oracle.svm.core.imagelayer.LayeredImageOptions;
 import com.oracle.svm.core.util.ClasspathUtils;
 import com.oracle.svm.core.util.InterruptImageBuilding;
 import com.oracle.svm.core.util.UserError;
-import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.hosted.annotation.SubstrateAnnotationExtractor;
 import com.oracle.svm.hosted.driver.IncludeOptionsSupport;
 import com.oracle.svm.hosted.driver.LayerOptionsSupport;
 import com.oracle.svm.hosted.image.PreserveOptionsSupport;
 import com.oracle.svm.hosted.imagelayer.HostedImageLayerBuildingSupport;
 import com.oracle.svm.hosted.option.HostedOptionParser;
-import com.oracle.svm.util.ClassUtil;
-import com.oracle.svm.util.LogUtils;
-import com.oracle.svm.util.ModuleSupport;
-import com.oracle.svm.util.ReflectionUtil;
+import com.oracle.svm.shared.option.AccumulatingLocatableMultiOptionValue;
+import com.oracle.svm.shared.option.HostedOptionKey;
+import com.oracle.svm.shared.option.LocatableMultiOptionValue.ValueWithOrigin;
+import com.oracle.svm.shared.option.OptionOrigin;
+import com.oracle.svm.shared.option.SubstrateOptionsParser;
+import com.oracle.svm.shared.util.ClassUtil;
+import com.oracle.svm.shared.util.LogUtils;
+import com.oracle.svm.shared.util.ReflectionUtil;
+import com.oracle.svm.shared.util.VMError;
+import com.oracle.svm.util.GuestAccess;
+import com.oracle.svm.util.HostedModuleSupport;
+import com.oracle.svm.util.JVMCIReflectionUtil;
 
 import jdk.graal.compiler.debug.GraalError;
+import jdk.graal.compiler.options.OptionDescriptors;
 import jdk.graal.compiler.options.OptionKey;
 import jdk.graal.compiler.options.OptionValues;
+import jdk.graal.compiler.util.EconomicHashSet;
+import jdk.graal.compiler.vmaccess.InvocationException;
 import jdk.internal.module.Modules;
 import jdk.internal.module.Resources;
+import jdk.vm.ci.meta.JavaConstant;
 
+/**
+ * Provides class- and module-path support for native image builds.
+ *
+ * GR-77847: This class needs to be revisited for Terminus.
+ */
 public final class NativeImageClassLoaderSupport {
 
     public static final String ALL_UNNAMED = "ALL-UNNAMED";
@@ -127,29 +139,37 @@ public final class NativeImageClassLoaderSupport {
     private final List<Path> imagemp;
     private final List<Path> buildmp;
 
-    private final Set<Path> imageProvidedJars;
-    /** Cleared by {@link #computePathEntryDigests()} on first call. */
+    private final UnmodifiableEconomicSet<Path> imageProvidedJars;
+    /**
+     * Cleared by {@link #getPathEntryDigests()} on first call.
+     */
     private PathDigests pathDigests;
+    /**
+     * Cached after the mutable {@link #pathDigests} have been aggregated because a single
+     * classloader can be reused to build multiple layered images in the same process.
+     */
+    private List<PathDigestEntry> pathDigestEntries;
     private final Class<?> explodedModuleReaderClass;
-
-    private final EconomicMap<URI, EconomicSet<String>> classes;
-    private final EconomicMap<URI, EconomicSet<String>> packages;
-    private final EconomicSet<String> emptySet;
-    private final EconomicSet<URI> builderURILocations;
 
     private final ConcurrentHashMap<String, LinkedHashSet<String>> serviceProviders;
 
-    private final NativeImageClassLoader classLoader;
+    private final ClassLoader classLoader;
 
     public final ModuleFinder upgradeAndSystemModuleFinder;
     public final ModuleLayer moduleLayerForImageBuild;
     public final ModuleFinder modulepathModuleFinder;
+    /**
+     * System modules that are transitively read by real application modules on the image module
+     * path. These modules are not necessarily explicit image roots, but runtime module metadata and
+     * runtime class loading can still need them in the image.
+     */
+    public final Set<String> imageModulePathRequiredSystemModules;
 
-    public final AnnotationExtractor annotationExtractor;
+    private AnnotationExtractor annotationExtractor;
 
     private Path layerFile;
 
-    private final IncludeSelectors layerSelectors = new IncludeSelectors(SubstrateOptions.LayerCreate);
+    private final IncludeSelectors layerSelectors = new IncludeSelectors(LayeredImageOptions.LayerCreate);
     private final IncludeSelectors preserveSelectors = new IncludeSelectors(SubstrateOptions.Preserve);
     private final IncludeSelectors dynamicAccessSelectors = new IncludeSelectors(SubstrateOptions.TrackDynamicAccess);
     private boolean includeConfigSealed;
@@ -208,28 +228,17 @@ public final class NativeImageClassLoaderSupport {
         return dynamicAccessSelectors.classpathEntries().isEmpty() && dynamicAccessSelectors.moduleNames().isEmpty() && dynamicAccessSelectors.packages().isEmpty();
     }
 
-    private final Set<Class<?>> classesToPreserve = Collections.newSetFromMap(new ConcurrentHashMap<>());
-    private final Set<String> classNamesToPreserve = Collections.newSetFromMap(new ConcurrentHashMap<>());
-
     private LoadClassHandler loadClassHandler;
 
-    private Optional<LibGraalLoader> libGraalLoader;
-    private List<ClassLoader> classLoaders;
-
-    private final Set<Class<?>> classesToIncludeUnconditionally = ConcurrentHashMap.newKeySet();
-    private final Set<String> includedJavaPackages = ConcurrentHashMap.newKeySet();
+    private JavaConstant libGraalLoader;
+    private List<JavaConstant> classLoaders;
 
     private final Method implAddReadsAllUnnamed = ReflectionUtil.lookupMethod(Module.class, "implAddReadsAllUnnamed");
     private final Method implAddEnableNativeAccess = ReflectionUtil.lookupMethod(Module.class, "implAddEnableNativeAccess");
     private final Method implAddEnableNativeAccessToAllUnnamed = ReflectionUtil.lookupMethod(Module.class, "implAddEnableNativeAccessToAllUnnamed");
 
     @SuppressWarnings("this-escape")
-    protected NativeImageClassLoaderSupport(ClassLoader defaultSystemClassLoader, String[] classpath, String[] modulePath) {
-
-        classes = EconomicMap.create();
-        packages = EconomicMap.create();
-        emptySet = EconomicSet.create();
-        builderURILocations = EconomicSet.create();
+    NativeImageClassLoaderSupport(ClassLoader defaultSystemClassLoader, String[] classpath, String[] modulePath) {
         serviceProviders = new ConcurrentHashMap<>();
 
         imagecp = Arrays.stream(classpath)
@@ -248,7 +257,6 @@ public final class NativeImageClassLoaderSupport {
                         .map(Path::of)
                         .flatMap(NativeImageClassLoaderSupport::toRealPath)
                         .toList();
-        buildcp.stream().map(Path::toUri).forEach(builderURILocations::add);
 
         imagemp = Arrays.stream(modulePath)
                         .map(Path::of)
@@ -283,14 +291,13 @@ public final class NativeImageClassLoaderSupport {
 
         ModuleLayer moduleLayer = ModuleLayer.defineModules(configuration, List.of(ModuleLayer.boot()), _ -> classLoader).layer();
         adjustBootLayerQualifiedExports(moduleLayer);
+        imageModulePathRequiredSystemModules = computeImageModulePathRequiredSystemModules(configuration, moduleNames);
         moduleLayerForImageBuild = moduleLayer;
         allLayers(moduleLayerForImageBuild).stream()
                         .flatMap(layer -> layer.modules().stream())
                         .forEach(this::registerModulePathServiceProviders);
 
         modulepathModuleFinder = ModuleFinder.of(modulepath().toArray(Path[]::new));
-
-        annotationExtractor = new SubstrateAnnotationExtractor();
 
         includeConfigSealed = false;
 
@@ -309,23 +316,42 @@ public final class NativeImageClassLoaderSupport {
         return Stream.concat(imagecp.stream(), buildcp.stream()).distinct().collect(Collectors.toList());
     }
 
+    List<Path> getBuildClassPath() {
+        return buildcp;
+    }
+
     List<Path> applicationClassPath() {
         return imagecp;
     }
 
-    public NativeImageClassLoader getClassLoader() {
+    public ClassLoader getClassLoader() {
         return classLoader;
     }
 
     /**
-     * The temporary {@link PathDigestEntry} object is used to create the list of
-     * {@link PathDigestEntry} tuples. Note that the {@code pathDigests} field is cleared after the
-     * first time this method is called.
+     * Returns the class loader used to load image classes as a constant owned by the guest context.
+     * In fully isolated mode, this is the guest system class loader. Otherwise, it is a constant
+     * reference to the hosted {@linkplain #getClassLoader() native image class loader}.
      */
-    public List<PathDigestEntry> computePathEntryDigests() {
-        List<PathDigestEntry> res = PathDigestEntry.aggregatePathDigests(pathDigests);
-        pathDigests = null;
-        return res;
+    private JavaConstant getGuestClassLoader() {
+        GuestAccess guestAccess = GuestAccess.get();
+        if (guestAccess.isFullyIsolated()) {
+            return guestAccess.invokeStatic(guestAccess.elements.java_lang_ClassLoader_getSystemClassLoader);
+        }
+        return guestAccess.getSnippetReflection().forObject(getClassLoader());
+    }
+
+    /**
+     * The temporary {@link PathDigests} object is used to create the list of
+     * {@link PathDigestEntry} tuples. Note that the {@code pathDigests} field is cleared after the
+     * first time this method is called, and subsequent calls return the cached entries.
+     */
+    public List<PathDigestEntry> getPathEntryDigests() {
+        if (pathDigests != null) {
+            pathDigestEntries = List.copyOf(PathDigestEntry.aggregatePathDigests(pathDigests));
+            pathDigests = null;
+        }
+        return pathDigestEntries;
     }
 
     public void initializePathDigests(Path digestIgnoreRelativePath) {
@@ -348,6 +374,7 @@ public final class NativeImageClassLoaderSupport {
         }
 
         pathDigests = new PathDigests(filterIgnoredPathEntries(imagecp, digestIgnorePaths), filterIgnoredPathEntries(imagemp, digestIgnorePaths));
+        pathDigestEntries = null;
     }
 
     private static List<Path> filterIgnoredPathEntries(List<Path> pathEntries, List<Path> digestIgnorePaths) {
@@ -361,14 +388,66 @@ public final class NativeImageClassLoaderSupport {
         }).toList();
     }
 
-    public LibGraalLoader getLibGraalLoader() {
+    public JavaConstant getLibGraalLoader() {
         VMError.guarantee(libGraalLoader != null, "Invalid access to libGraalLoader before getting set up");
-        return libGraalLoader.orElse(null);
+        return libGraalLoader;
     }
 
-    public List<ClassLoader> getClassLoaders() {
+    public List<JavaConstant> getClassLoaders() {
         VMError.guarantee(classLoaders != null, "Invalid access to classLoaders before getting set up");
         return classLoaders;
+    }
+
+    /**
+     * Installs the same-context annotation extractor after the guest VM configuration is available.
+     */
+    void setAnnotationExtractor(AnnotationExtractor extractor) {
+        VMError.guarantee(annotationExtractor == null, "Annotation extractor is already initialized");
+        annotationExtractor = Objects.requireNonNull(extractor);
+    }
+
+    /**
+     * Returns the same-context annotation extractor selected for this image build.
+     */
+    AnnotationExtractor getAnnotationExtractor() {
+        VMError.guarantee(annotationExtractor != null, "Annotation extractor is not initialized");
+        return annotationExtractor;
+    }
+
+    /**
+     * Pre-initializes the dynamic modules that {@link Proxy} creates for public-interface proxy
+     * classes.
+     *
+     * {@link Proxy} assigns names such as {@code jdk.proxyN} lazily, when the first
+     * public-interface proxy class is created for a class loader. The assigned module name depends
+     * on the class loader and on the order in which proxy modules are allocated. For layered image
+     * builds, that order must be stable between layer creation and later layer use, otherwise
+     * classes in different layers can observe different dynamic proxy module names.
+     *
+     * To make the allocation deterministic, create a harmless throw-away proxy class for each
+     * relevant class loader before proxy creation can be triggered indirectly by class loading,
+     * configuration parsing, or analysis. {@link Runnable} is used only as a simple public
+     * interface; the generated proxy classes themselves are not used.
+     */
+    @SuppressWarnings("deprecation")
+    public void preinitializeProxyDynamicModules() {
+        Set<ClassLoader> loaders = new EconomicHashSet<>(Equivalence.IDENTITY_WITH_SYSTEM_HASHCODE);
+        loaders.add(null);
+        loaders.add(ClassLoader.getPlatformClassLoader());
+        NativeImageSystemClassLoader systemClassLoader = NativeImageSystemClassLoader.singleton();
+        loaders.add(systemClassLoader.defaultSystemClassLoader);
+        loaders.add(systemClassLoader);
+        for (JavaConstant guestClassLoader : getClassLoaders()) {
+            /*
+             * GR-77847: This converts a guest class-loader constant back to a builder-hosted object.
+             * Terminus must preinitialize proxy dynamic modules in the guest context instead.
+             */
+            loaders.add(GuestAccess.get().getSnippetReflection().asObject(ClassLoader.class, guestClassLoader));
+        }
+
+        for (ClassLoader loader : loaders) {
+            Proxy.getProxyClass(loader, Runnable.class);
+        }
     }
 
     public ModuleFinder getModulePathsFinder() {
@@ -385,7 +464,7 @@ public final class NativeImageClassLoaderSupport {
                              The cause is one of the libraries on the classpath does not handle correctly when all elements are included in the image.
                             If this happens, please open an issue for the library whose field was containing forbidden types and correct the '--initialize-at-build-time' configuration for your build.
                             """
-                            .replaceAll("\n", System.lineSeparator())
+                            .replace("\n", System.lineSeparator())
                             .formatted(SubstrateOptionsParser.commandArgument(SubstrateOptions.Preserve, PreserveOptionsSupport.PRESERVE_ALL));
             LogUtils.warning(msg);
 
@@ -409,13 +488,19 @@ public final class NativeImageClassLoaderSupport {
         loadClassHandler = new LoadClassHandler(executor, imageClassLoader);
         loadClassHandler.run();
 
-        LibGraalLoader loader = getLibGraalLoader();
+        /*
+         * GR-77772: This converts a guest class-loader constant back to a builder-hosted
+         * object. Terminus must keep this operation in the guest context instead.
+         */
+        LibGraalLoader loader = GuestAccess.get().getSnippetReflection().asObject(LibGraalLoader.class, getLibGraalLoader());
         if (loader != null) {
             /* If we have a LibGraalLoader, register its classes to the image builder */
+            GuestTypes guestTypes = imageClassLoader.guestTypes;
             for (String fqn : loader.getClassModuleMap().keySet()) {
                 try {
                     var clazz = ((ClassLoader) loader).loadClass(fqn);
-                    imageClassLoader.handleClass(clazz);
+                    imageClassLoader.registerClass(clazz);
+                    guestTypes.registerType(guestTypes.getGuestAccess().lookupType(clazz));
                 } catch (ClassNotFoundException e) {
                     throw GraalError.shouldNotReachHere(e, loader + " could not load class " + fqn);
                 }
@@ -423,22 +508,16 @@ public final class NativeImageClassLoaderSupport {
         }
     }
 
-    private String createOptionStr(HostedOptionKey<AccumulatingLocatableMultiOptionValue.Strings> option) {
-        ValueWithOrigin<String> layerCreateValue = option.getValue(getParsedHostedOptions()).lastValueWithOrigin().orElseThrow();
-        String layerCreateArgument = SubstrateOptionsParser.commandArgument(option, layerCreateValue.value());
-        return "specified with '%s' from %s".formatted(layerCreateArgument, layerCreateValue.origin());
-    }
-
     private HostedOptionParser hostedOptionParser;
     private OptionValues parsedHostedOptions;
     private List<String> remainingArguments;
 
-    public void setupHostedOptionParser(List<String> arguments) {
-        hostedOptionParser = new HostedOptionParser(getClassLoader(), arguments);
+    public HostedOptionParser setupHostedOptionParser(List<String> arguments, Predicate<OptionDescriptors> builderOptionFilter) {
+        var optionParser = new HostedOptionParser(getClassLoader(), arguments, builderOptionFilter);
         // Explicitly set the default value of Optimize as it can modify the default values of other
         // options
-        SubstrateOptions.Optimize.update(hostedOptionParser.getHostedValues(), SubstrateOptions.Optimize.getDefaultValue());
-        remainingArguments = Collections.unmodifiableList((hostedOptionParser.parse()));
+        SubstrateOptions.Optimize.update(optionParser.getHostedValues(), SubstrateOptions.Optimize.getDefaultValue());
+        remainingArguments = Collections.unmodifiableList((optionParser.parse()));
 
         /*
          * The image layer support needs to be configured early to correctly set the
@@ -446,11 +525,25 @@ public final class NativeImageClassLoaderSupport {
          * hostedOptionParser.getHostedValues(), so we want to affect the options map before it is
          * copied.
          */
-        EconomicMap<OptionKey<?>, Object> hostedValues = hostedOptionParser.getHostedValues();
+        EconomicMap<OptionKey<?>, Object> hostedValues = optionParser.getHostedValues();
         HostedImageLayerBuildingSupport.processLayerOptions(hostedValues, this);
         PreserveOptionsSupport.parsePreserveOption(hostedValues, this);
         DynamicAccessDetectionFeature.parseDynamicAccessOptions(hostedValues, this);
         parsedHostedOptions = new OptionValues(hostedValues);
+
+        if (HostedImageLayerBuildingSupport.isLayerCreateOptionEnabled(parsedHostedOptions)) {
+            if (!optionParser.getRuntimeValues().isEmpty()) {
+                if (LayeredImageOptions.LayeredImageDiagnosticOptions.WarnOnSharedLayerSetRuntimeOptions.getValue(parsedHostedOptions)) {
+                    warn("Runtime option set in shared layer. This will be ignored.");
+                    optionParser.clearRuntimeValues();
+                } else {
+                    throw VMError.shouldNotReachHere("It is currently disallowed to set a runtime option in a shared layer. Please set %s if you want to downgrade this error into a warning.",
+                                    SubstrateOptionsParser.commandArgument(LayeredImageOptions.LayeredImageDiagnosticOptions.WarnOnSharedLayerSetRuntimeOptions, "+"));
+                }
+            }
+        }
+        this.hostedOptionParser = optionParser;
+        return optionParser;
     }
 
     public HostedOptionParser getHostedOptionParser() {
@@ -463,18 +556,6 @@ public final class NativeImageClassLoaderSupport {
 
     public OptionValues getParsedHostedOptions() {
         return parsedHostedOptions;
-    }
-
-    public EconomicSet<String> classes(URI container) {
-        return classes.get(container, emptySet);
-    }
-
-    public EconomicSet<String> packages(URI container) {
-        return packages.get(container, emptySet);
-    }
-
-    public boolean noEntryForURI(EconomicSet<String> set) {
-        return set == emptySet;
     }
 
     /**
@@ -510,7 +591,7 @@ public final class NativeImageClassLoaderSupport {
 
     private static void adjustBootLayerQualifiedExports(ModuleLayer layer) {
         /*
-         * For all qualified exports packages of modules in the the boot layer we check if layer
+         * For all qualified exports packages of modules in the boot layer we check if layer
          * contains modules that satisfy such qualified exports. If we find a match we perform a
          * addExports.
          */
@@ -552,6 +633,54 @@ public final class NativeImageClassLoaderSupport {
 
     protected List<Path> applicationModulePath() {
         return imagemp;
+    }
+
+    /**
+     * Computes the system modules that are transitively read by application modules passed via
+     * {@code -imagemp}.
+     *
+     * @param configuration module graph resolved from the image module path
+     * @param applicationModuleNames module names discovered directly from the image module path
+     * @return names of system modules read transitively by application modules
+     */
+    private Set<String> computeImageModulePathRequiredSystemModules(Configuration configuration, Set<String> applicationModuleNames) {
+        Set<ResolvedModule> applicationModules = applicationModuleNames.stream()
+                        .map(configuration::findModule)
+                        .flatMap(Optional::stream)
+                        .filter(module -> !hasFileLocation(module, imageProvidedJars::contains))
+                        .collect(Collectors.toSet());
+        Set<String> requiredSystemModules = transitiveReads(applicationModules).stream()
+                        .map(ResolvedModule::name)
+                        .filter(moduleName -> upgradeAndSystemModuleFinder.find(moduleName).isPresent())
+                        .collect(Collectors.toUnmodifiableSet());
+        return requiredSystemModules;
+    }
+
+    /**
+     * Returns the transitive closure of {@link ResolvedModule#reads()} for {@code modules}.
+     */
+    private static Set<ResolvedModule> transitiveReads(Collection<ResolvedModule> modules) {
+        Set<ResolvedModule> reads = new LinkedHashSet<>();
+        Deque<ResolvedModule> worklist = modules.stream()
+                        .flatMap(module -> module.reads().stream())
+                        .collect(Collectors.toCollection(ArrayDeque::new));
+        while (!worklist.isEmpty()) {
+            ResolvedModule module = worklist.removeFirst();
+            if (reads.add(module)) {
+                module.reads().forEach(worklist::add);
+            }
+        }
+        return Set.copyOf(reads);
+    }
+
+    /**
+     * Tests whether {@code module} has a {@code file:} location accepted by {@code matches}.
+     */
+    private static boolean hasFileLocation(ResolvedModule module, Predicate<Path> matches) {
+        return module.reference().location().stream()
+                        .filter(uri -> "file".equalsIgnoreCase(uri.getScheme()))
+                        .map(Path::of)
+                        .anyMatch(matches);
     }
 
     public Optional<Module> findModule(String moduleName) {
@@ -599,7 +728,7 @@ public final class NativeImageClassLoaderSupport {
                 }
             }
         });
-        NativeImageClassLoaderOptions.EnableNativeAccess.getValue(parsedHostedOptions).values().stream().flatMap(m -> Arrays.stream(SubstrateUtil.split(m, ","))).forEach(moduleName -> {
+        NativeImageClassLoaderOptions.EnableNativeAccess.getValue(parsedHostedOptions).values().forEach(moduleName -> {
             if (ALL_UNNAMED.equals(moduleName)) {
                 ReflectionUtil.invokeMethod(implAddEnableNativeAccessToAllUnnamed, null);
             } else {
@@ -614,7 +743,9 @@ public final class NativeImageClassLoaderSupport {
      */
     private static void warn(String message) {
         // Checkstyle: Allow raw info or warning printing - begin
+        // Checkstyle: allow System.err (for JDK compatibility)
         System.err.println("WARNING: " + message);
+        // Checkstyle: disallow System.err
         // Checkstyle: Allow raw info or warning printing - end
     }
 
@@ -674,7 +805,7 @@ public final class NativeImageClassLoaderSupport {
     public static List<ModuleLayer> allLayers(ModuleLayer moduleLayer) {
         /** Implementation taken from {@link ModuleLayer#layers()} */
         List<ModuleLayer> allLayers = new ArrayList<>();
-        Set<ModuleLayer> visited = new HashSet<>();
+        EconomicSet<ModuleLayer> visited = EconomicSet.create();
         Deque<ModuleLayer> stack = new ArrayDeque<>();
         visited.add(moduleLayer);
         stack.push(moduleLayer);
@@ -709,31 +840,36 @@ public final class NativeImageClassLoaderSupport {
 
     public void setupLibGraalClassLoader() {
         var className = SubstrateOptions.LibGraalClassLoader.getValue(parsedHostedOptions);
+        var guestAccess = GuestAccess.get();
+        JavaConstant nativeImageClassLoader = getGuestClassLoader();
         if (!className.isEmpty()) {
             String nameOption = SubstrateOptionsParser.commandArgument(SubstrateOptions.LibGraalClassLoader, className);
+            JavaConstant loaderClass;
             try {
-                Class<?> loaderClass = Class.forName(className, true, classLoader);
-                if (!LibGraalLoader.class.isAssignableFrom(loaderClass)) {
-                    throw VMError.shouldNotReachHere("Class named by " + nameOption + " does not implement " + LibGraalLoader.class + '.');
-                }
-                libGraalLoader = Optional.of((LibGraalLoader) ReflectionUtil.newInstance(loaderClass));
-                classLoaders = List.of((ClassLoader) libGraalLoader.get(), getClassLoader());
-            } catch (ClassNotFoundException e) {
-                throw VMError.shouldNotReachHere("Class named by " + nameOption + " could not be found.", e);
+                loaderClass = guestAccess.invokeStatic(guestAccess.elements.java_lang_Class_forName,
+                                guestAccess.asGuestString(className), JavaConstant.forBoolean(true), nativeImageClassLoader);
+            } catch (InvocationException e) {
+                throw VMError.shouldNotReachHere("Class named by " + nameOption + " could not be loaded.", e);
             }
+            var loaderType = guestAccess.getProviders().getConstantReflection().asJavaType(loaderClass);
+            if (!guestAccess.lookupType(LibGraalLoader.class).isAssignableFrom(loaderType)) {
+                throw VMError.shouldNotReachHere("Class named by " + nameOption + " does not implement " + LibGraalLoader.class + '.');
+            }
+            libGraalLoader = guestAccess.invoke(JVMCIReflectionUtil.getDeclaredConstructor(false, loaderType), null);
+            classLoaders = List.of(libGraalLoader, nativeImageClassLoader);
         } else {
-            libGraalLoader = Optional.empty();
-            classLoaders = List.of(getClassLoader());
+            libGraalLoader = JavaConstant.NULL_POINTER;
+            classLoaders = List.of(nativeImageClassLoader);
         }
     }
 
     public void allClassesLoaded() {
         if (loadClassHandler != null) {
-            loadClassHandler.validatePackageInclusionRequests(loadClassHandler.includePackages, SubstrateOptions.LayerCreate);
-            loadClassHandler.validatePackageInclusionRequests(loadClassHandler.preservePackages, SubstrateOptions.Preserve);
+            GuestTypes guestTypes = loadClassHandler.imageClassLoader.guestTypes;
+            guestTypes.validatePackageInclusionRequests(loadClassHandler.includePackages, LayeredImageOptions.LayerCreate, getParsedHostedOptions());
+            guestTypes.validatePackageInclusionRequests(loadClassHandler.preservePackages, SubstrateOptions.Preserve, getParsedHostedOptions());
             loadClassHandler = null;
         }
-        reportBuilderClassesInApplication();
     }
 
     public Path getLayerFile() {
@@ -841,13 +977,8 @@ public final class NativeImageClassLoaderSupport {
         }
     }
 
-    static Optional<String> getMainClassFromModule(Object module) {
-        assert module instanceof Module : "Argument `module` is not an instance of java.lang.Module";
-        return ((Module) module).getDescriptor().mainClass();
-    }
-
-    private static Set<Path> parseImageProvidedJarsProperty() {
-        Set<Path> imageProvidedJars = new HashSet<>();
+    private static UnmodifiableEconomicSet<Path> parseImageProvidedJarsProperty() {
+        EconomicSet<Path> imageProvidedJars = EconomicSet.create();
         String args = System.getProperty(SharedConstants.IMAGE_PROVIDED_JARS_ENV_VARIABLE, "");
         if (!args.isEmpty()) {
             String[] parts = args.split(File.pathSeparator);
@@ -855,7 +986,36 @@ public final class NativeImageClassLoaderSupport {
                 imageProvidedJars.add(Path.of(part));
             }
         }
-        return Collections.unmodifiableSet(imageProvidedJars);
+        return imageProvidedJars; // unmodifiable
+    }
+
+    record PackageRequest(Set<String> requestedPackages,
+                    List<LayerOptionsSupport.PackageOptionValue> requestedPackageWildcards) {
+        public static PackageRequest create(Set<LayerOptionsSupport.PackageOptionValue> javaPackagesToInclude) {
+            Set<String> tempRequestedPackages = new LinkedHashSet<>();
+            List<LayerOptionsSupport.PackageOptionValue> tempRequestedPackageWildcards = new ArrayList<>();
+            for (LayerOptionsSupport.PackageOptionValue value : javaPackagesToInclude) {
+                if (value.isWildcard()) {
+                    tempRequestedPackageWildcards.add(value);
+                } else {
+                    tempRequestedPackages.add(value.name());
+                }
+            }
+            return new PackageRequest(Collections.unmodifiableSet(tempRequestedPackages), List.copyOf(tempRequestedPackageWildcards));
+        }
+
+        public boolean shouldInclude(String packageName) {
+            if (requestedPackages.contains(packageName)) {
+                return true;
+            }
+            for (LayerOptionsSupport.PackageOptionValue requestedPackageWildcard : requestedPackageWildcards) {
+                if (packageName.startsWith(requestedPackageWildcard.name())) {
+                    return true;
+                }
+            }
+            return false;
+        }
+
     }
 
     private final class LoadClassHandler {
@@ -866,34 +1026,6 @@ public final class NativeImageClassLoaderSupport {
         LongAdder entriesProcessed;
         volatile String currentlyProcessedEntry;
         boolean initialReport;
-
-        record PackageRequest(Set<String> requestedPackages, List<LayerOptionsSupport.PackageOptionValue> requestedPackageWildcards) {
-            public static PackageRequest create(Set<LayerOptionsSupport.PackageOptionValue> javaPackagesToInclude) {
-                Set<String> tempRequestedPackages = new LinkedHashSet<>();
-                List<LayerOptionsSupport.PackageOptionValue> tempRequestedPackageWildcards = new ArrayList<>();
-                for (LayerOptionsSupport.PackageOptionValue value : javaPackagesToInclude) {
-                    if (value.isWildcard()) {
-                        tempRequestedPackageWildcards.add(value);
-                    } else {
-                        tempRequestedPackages.add(value.name());
-                    }
-                }
-                return new PackageRequest(Collections.unmodifiableSet(tempRequestedPackages), List.copyOf(tempRequestedPackageWildcards));
-            }
-
-            public boolean shouldInclude(String packageName) {
-                if (requestedPackages.contains(packageName)) {
-                    return true;
-                }
-                for (LayerOptionsSupport.PackageOptionValue requestedPackageWildcard : requestedPackageWildcards) {
-                    if (packageName.startsWith(requestedPackageWildcard.name())) {
-                        return true;
-                    }
-                }
-                return false;
-            }
-
-        }
 
         PackageRequest includePackages;
         PackageRequest preservePackages;
@@ -910,6 +1042,15 @@ public final class NativeImageClassLoaderSupport {
             preservePackages = PackageRequest.create(preserveSelectors.packages.keySet());
         }
 
+        private enum InitModuleAction {
+            LoadLink,
+            LoadLinkAndRegisterTypes;
+
+            boolean registerTypes() {
+                return this == LoadLinkAndRegisterTypes;
+            }
+        }
+
         private void run() {
             ScheduledExecutorService scheduledExecutor = Executors.newSingleThreadScheduledExecutor();
             try {
@@ -921,27 +1062,81 @@ public final class NativeImageClassLoaderSupport {
                     System.out.println("Total processed entries: " + entriesProcessed.longValue() + ", current entry: " + currentlyProcessedEntry);
                 }, 5, 1, TimeUnit.MINUTES);
 
-                var requiresInit = new HashSet<>(List.of("jdk.internal.vm.ci", "jdk.graal.compiler", "com.oracle.graal.graal_enterprise",
-                                "org.graalvm.nativeimage", "org.graalvm.truffle", "org.graalvm.truffle.runtime",
-                                "org.graalvm.truffle.compiler", "com.oracle.truffle.enterprise", "org.graalvm.jniutils",
-                                "org.graalvm.nativebridge"));
+                /*
+                 * Modules for which LoadClassHandler.initModule must be called explicitly. The
+                 * reasons differ by module, so each entry must document why the initModule
+                 * processing is needed.
+                 */
+                EconomicMap<String, InitModuleAction> modulesRequiringInitModule = EconomicMap.create();
+                /*
+                 * The -H:Preserve=package=... suboption can request packages from java.base, such
+                 * as sun.invoke.util, so initModule must scan java.base for those classes/packages.
+                 */
+                modulesRequiringInitModule.put("java.base", InitModuleAction.LoadLink);
+                /*
+                 * Ensure generated @NodeIntrinsic plugin classes from jdk.graal.compiler are
+                 * eagerly registered before analysis starts parsing code that uses them, e.g.
+                 * BranchProbabilityNode.probability(...) and UnreachableNode.unreachable().
+                 */
+                modulesRequiringInitModule.put("jdk.graal.compiler", InitModuleAction.LoadLinkAndRegisterTypes);
+                /*
+                 * Ensure enterprise nodes, snippets, and lowering code are eagerly available before
+                 * image compilation reaches them, e.g. EE CopyOfSnippets / CopyOfNode lowering.
+                 */
+                modulesRequiringInitModule.put("com.oracle.graal.graal_enterprise", InitModuleAction.LoadLinkAndRegisterTypes);
+                /*
+                 * Word and C interface types such as WordPointer and CCharPointer must be available
+                 * during analysis for native-image hosted intrinsics.
+                 */
+                modulesRequiringInitModule.put("org.graalvm.nativeimage", InitModuleAction.LoadLinkAndRegisterTypes);
+                /*
+                 * libjvmcicompiler analysis reaches JNIUtil and needs the org.graalvm.jniutils
+                 * word-based JNI interfaces eagerly available. A cleaner fix would package jniutils
+                 * only for image builds that need it, but that is blocked by the currently built-in
+                 * org.graalvm.truffle.runtime module depending on org.graalvm.jniutils. Defer that
+                 * packaging cleanup to GR-74275.
+                 */
+                modulesRequiringInitModule.put("org.graalvm.jniutils", InitModuleAction.LoadLinkAndRegisterTypes);
 
-                Set<String> additionalSystemModules = upgradeAndSystemModuleFinder.findAll().stream()
+                upgradeAndSystemModuleFinder.findAll().stream()
                                 .map(v -> v.descriptor().name())
                                 .filter(n -> getJavaModuleNamesToInclude().contains(n) || getJavaModuleNamesToPreserve().contains(n))
-                                .collect(Collectors.toSet());
-                requiresInit.addAll(additionalSystemModules);
+                                .distinct().forEach(mn -> modulesRequiringInitModule.putIfAbsent(mn, InitModuleAction.LoadLinkAndRegisterTypes));
 
-                Set<String> explicitlyAddedModules = ModuleSupport.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES);
+                Set<String> explicitlyAddedModules = HostedModuleSupport.parseModuleSetModifierProperty(HostedModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES);
+                for (String moduleName : imageModulePathRequiredSystemModules) {
+                    /*
+                     * Application module-path entries can require system modules that are already
+                     * visible to the builder VM. BootClassRegistry resolves a runtime-loaded boot
+                     * class' package to its jimage module, e.g. javax.xml.namespace.QName to
+                     * java.xml, through the runtime BuiltinClassLoader.packageToModule metadata.
+                     * Load and link these modules so their package descriptors are included in the
+                     * synthesized runtime boot module layer, without registering their classes as
+                     * analysis types.
+                     */
+                    modulesRequiringInitModule.putIfAbsent(moduleName, InitModuleAction.LoadLink);
+                }
 
                 for (ModuleReference moduleReference : upgradeAndSystemModuleFinder.findAll()) {
                     String moduleName = moduleReference.descriptor().name();
-                    boolean moduleRequiresInit = requiresInit.contains(moduleName);
-                    if (moduleRequiresInit || explicitlyAddedModules.contains(moduleName)) {
-                        initModule(moduleReference, moduleRequiresInit);
+                    InitModuleAction action = modulesRequiringInitModule.get(moduleName);
+                    if (explicitlyAddedModules.contains(moduleName) && action == null) {
+                        /*
+                         * Make sure --add-modules can be used to make -H:Preserve=package= work for
+                         * built-in modules other than java.base.
+                         */
+                        action = InitModuleAction.LoadLink;
+                    }
+                    if (action != null) {
+                        initModule(moduleReference, action.registerTypes());
                     }
                 }
+
                 for (ModuleReference moduleReference : modulepathModuleFinder.findAll()) {
+                    /*
+                     * For all modules on the imageMP we need tracking so that e.g.
+                     * -H:Preserve=package= works for them.
+                     */
                     initModule(moduleReference, true);
                 }
 
@@ -951,47 +1146,46 @@ public final class NativeImageClassLoaderSupport {
             }
         }
 
-        /* Report package inclusion requests that did not have any effect. */
-        void validatePackageInclusionRequests(PackageRequest request, HostedOptionKey<AccumulatingLocatableMultiOptionValue.Strings> optionString) {
-            List<LayerOptionsSupport.PackageOptionValue> unusedRequests = new ArrayList<>();
-            for (String requestedPackage : request.requestedPackages) {
-                if (!NativeImageClassLoaderSupport.this.includedJavaPackages.contains(requestedPackage)) {
-                    unusedRequests.add(new LayerOptionsSupport.PackageOptionValue(requestedPackage, false));
+        /**
+         * Determines if {@code moduleReference} refers to a module that is visible to the guest
+         * context. This is a temporary measure for Terminus to limit scanning of classes to only
+         * those visible to the guest context when it differs from the host context.
+         */
+        private boolean isVisibleToGuest(ModuleReference moduleReference) {
+            if (!imageClassLoader.guestTypes.getGuestAccess().isFullyIsolated()) {
+                // Guest and host see the same paths
+                return true;
+            }
+            URI uri = moduleReference.location().get();
+            for (var jar : imageProvidedJars) {
+                if (jar.toUri().equals(uri)) {
+                    return true;
                 }
             }
-            var unusedWildcardRequests = new LinkedHashSet<>(request.requestedPackageWildcards);
-            if (!unusedWildcardRequests.isEmpty()) {
-                for (String includedPackage : NativeImageClassLoaderSupport.this.includedJavaPackages) {
-                    unusedWildcardRequests.removeIf(wildcardRequest -> includedPackage.startsWith(wildcardRequest.name()));
-                }
-            }
-            if (!(unusedRequests.isEmpty() && unusedWildcardRequests.isEmpty())) {
-                var requestsStrings = Stream.concat(unusedRequests.stream(), unusedWildcardRequests.stream())
-                                .map(packageOptionValue -> '\'' + packageOptionValue.toString() + '\'')
-                                .toList();
-                boolean plural = requestsStrings.size() > 1;
-                String pluralS = plural ? "s" : "";
-                throw UserError.abort("Package request%s (package=...) %s %s could not find requested package%s. " +
-                                "Provide a class/module-path that contains the package%s or remove %s from option.",
-                                pluralS, String.join(", ", requestsStrings), createOptionStr(optionString), pluralS,
-                                pluralS, plural ? "entries" : "entry");
-            }
+            return false;
         }
 
-        private void initModule(ModuleReference moduleReference, boolean moduleRequiresInit) {
+        private void initModule(ModuleReference moduleReference, boolean registerTypes) {
             String moduleReferenceLocation = moduleReference.location().map(URI::toString).orElse("UnknownModuleReferenceLocation");
             currentlyProcessedEntry = moduleReferenceLocation;
             Optional<Module> optionalModule = findModule(moduleReference.descriptor().name());
             if (optionalModule.isEmpty()) {
                 return;
             }
+
+            boolean visibleToGuest = isVisibleToGuest(moduleReference);
+            if (!visibleToGuest && !registerTypes) {
+                return;
+            }
+
             try (ModuleReader moduleReader = moduleReference.open()) {
                 Module module = optionalModule.get();
                 final boolean includeUnconditionally = layerSelectors.moduleNames().contains(module.getName());
                 final boolean preserveModule = preserveSelectors.moduleNames().contains(module.getName());
                 var container = moduleReference.location().orElseThrow();
-                if (ModuleLayer.boot().equals(module.getLayer())) {
-                    builderURILocations.add(container);
+                final boolean isBuilderContainer = ModuleLayer.boot().equals(module.getLayer());
+                if (isBuilderContainer) {
+                    imageClassLoader.guestTypes.builderURILocations.add(container);
                 }
                 final boolean isInImageModulePathOfLayeredBuild = pathDigests != null && pathDigests.mpDigests.containsKey(container);
                 final boolean isJar = ClasspathUtils.isJar(Path.of(container));
@@ -1001,7 +1195,13 @@ public final class NativeImageClassLoaderSupport {
                         String className = extractClassName(moduleResource, fileSystemSeparatorChar);
                         if (className != null) {
                             currentlyProcessedEntry = moduleReferenceLocation + fileSystemSeparatorChar + moduleResource;
-                            executor.execute(() -> handleClassFileName(container, module, className, includeUnconditionally, moduleRequiresInit, preserveModule));
+                            if (visibleToGuest) {
+                                executor.execute(() -> handleClassFileName(container, module, className, includeUnconditionally, registerTypes, preserveModule, isBuilderContainer));
+                            } else {
+                                executor.execute(() -> {
+                                    handleBuilderModuleClassFileName(module, className, registerTypes);
+                                });
+                            }
                         }
                         if (isInImageModulePathOfLayeredBuild) {
                             executor.execute(() -> PathDigests.storePathFileDigest(container, moduleResource, isJar, pathDigests.mpDigests));
@@ -1019,11 +1219,10 @@ public final class NativeImageClassLoaderSupport {
          * the given {@link ModuleReader} corresponds to a
          * {@code jdk.internal.module.ModuleReferences$ExplodedModuleReader} (i.e.,
          * {@code container} is a directory which contains the contents of the module).
-         *
-         * Classloaders (e.g., {@link NativeImageClassLoader#findResource(String, String)}) can load
-         * resources pointed to by a symlink present on the modulepath, meaning the extension below
-         * is necessary if we want to keep track of such resources (e.g., for digest computation in
-         * layered builds).
+         * <p>
+         * Class loaders can load resources pointed to by a symlink present on the modulepath,
+         * meaning the extension below is necessary if we want to keep track of such resources
+         * (e.g., for digest computation in layered builds).
          */
         @SuppressWarnings("resource")
         private Stream<String> moduleReaderListFollowSymlinks(ModuleReader reader, URI container) throws IOException {
@@ -1098,7 +1297,7 @@ public final class NativeImageClassLoaderSupport {
                     String className = extractClassName(fileName, fileSystemSeparatorChar);
                     if (className != null) {
                         currentlyProcessedEntry = file.toUri().toString();
-                        executor.execute(() -> handleClassFileName(container, null, className, includeUnconditionally, true, includeAllMetadata));
+                        executor.execute(() -> handleClassFileName(container, null, className, includeUnconditionally, true, includeAllMetadata, false));
                     }
                     if (isInImageClassPathOfLayeredBuild) {
                         executor.execute(() -> PathDigests.storePathFileDigest(container, fileName, isJar, pathDigests.cpDigests));
@@ -1185,50 +1384,57 @@ public final class NativeImageClassLoaderSupport {
             return strippedClassFileName.equals("module-info") ? null : strippedClassFileName.replace(fileSystemSeparatorChar, '.');
         }
 
-        private void handleClassFileName(URI container, Module module, String className, boolean includeUnconditionally, boolean classRequiresInit, boolean preserveReflectionMetadata) {
-            if (classRequiresInit) {
-                synchronized (classes) {
-                    EconomicSet<String> classNames = classes.get(container);
-                    if (classNames == null) {
-                        classNames = EconomicSet.create();
-                        classes.put(container, classNames);
-                    }
-                    classNames.add(className);
-                }
-                synchronized (packages) {
-                    EconomicSet<String> packageNames = packages.get(container);
-                    if (packageNames == null) {
-                        packageNames = EconomicSet.create();
-                        packages.put(container, packageNames);
-                    }
-                    packageNames.add(packageName(className));
-                }
-            }
+        /**
+         * Processes the name of a class discovered while scanning a classpath or module-path
+         * origin.
+         */
+        private void handleClassFileName(URI container, Module module, String className, boolean includeUnconditionally, boolean registerTypes, boolean preserveReflectionMetadata,
+                        boolean isBuilderContainer) {
+            handleClassFileNameInBuilderContext(module, className, registerTypes);
 
+            imageClassLoader.guestTypes.handleClassFileName(container,
+                            module,
+                            className,
+                            packageName(className),
+                            includeUnconditionally,
+                            registerTypes,
+                            preserveReflectionMetadata,
+                            isBuilderContainer,
+                            includePackages,
+                            preservePackages);
+
+            imageClassLoader.watchdog.recordActivity();
+        }
+
+        private void handleClassFileNameInBuilderContext(Module module, String className, boolean registerTypes) {
             Class<?> clazz = null;
             try {
                 clazz = imageClassLoader.forName(className, module);
             } catch (AssertionError error) {
                 VMError.shouldNotReachHere(error);
-            } catch (Throwable t) {
-                if (preserveReflectionMetadata) {
-                    classNamesToPreserve.add(className);
-                }
-                ImageClassLoader.handleClassLoadingError(t);
+            } catch (ClassNotFoundException | SecurityException | LinkageError t) {
+                LinkageError le = t instanceof LinkageError l ? l : (LinkageError) new NoClassDefFoundError(className).initCause(t);
+                ImageClassLoader.handleClassLoadingError(le, "host: resolving class %s in %s", className, module);
             }
 
-            if (clazz != null) {
-                String packageName = clazz.getPackageName();
-                includedJavaPackages.add(packageName);
-                if (includeUnconditionally || includePackages.shouldInclude(packageName)) {
-                    classesToIncludeUnconditionally.add(clazz);
-                }
-                if (classRequiresInit) {
-                    imageClassLoader.handleClass(clazz);
-                }
-                if (preserveReflectionMetadata || preservePackages.shouldInclude(packageName)) {
-                    classesToPreserve.add(clazz);
-                }
+            if (clazz != null && registerTypes) {
+                imageClassLoader.registerClass(clazz);
+            }
+        }
+
+        private void handleBuilderModuleClassFileName(Module module, String className, boolean registerTypes) {
+            Class<?> clazz = null;
+            try {
+                clazz = imageClassLoader.forName(className, module);
+            } catch (AssertionError error) {
+                VMError.shouldNotReachHere(error);
+            } catch (ClassNotFoundException | SecurityException | LinkageError t) {
+                LinkageError le = t instanceof LinkageError l ? l : (LinkageError) new NoClassDefFoundError(className).initCause(t);
+                ImageClassLoader.handleClassLoadingError(le, "host: resolving class %s in %s", className, module);
+            }
+
+            if (clazz != null && registerTypes) {
+                imageClassLoader.registerBuilderClass(clazz);
             }
             imageClassLoader.watchdog.recordActivity();
         }
@@ -1237,39 +1443,6 @@ public final class NativeImageClassLoaderSupport {
     private static String packageName(String className) {
         int packageSep = className.lastIndexOf('.');
         return packageSep > 0 ? className.substring(0, packageSep) : "";
-    }
-
-    public void reportBuilderClassesInApplication() {
-        EconomicMap<URI, EconomicSet<String>> builderClasses = EconomicMap.create();
-        EconomicMap<URI, EconomicSet<String>> applicationClasses = EconomicMap.create();
-        MapCursor<URI, EconomicSet<String>> classesEntries = classes.getEntries();
-        while (classesEntries.advance()) {
-            var destinationMap = builderURILocations.contains(classesEntries.getKey()) ? builderClasses : applicationClasses;
-            destinationMap.put(classesEntries.getKey(), classesEntries.getValue());
-        }
-        boolean tolerateViolations = SubstrateOptions.AllowDeprecatedBuilderClassesOnImageClasspath.getValue(parsedHostedOptions);
-        MapCursor<URI, EconomicSet<String>> applicationClassesEntries = applicationClasses.getEntries();
-        while (applicationClassesEntries.advance()) {
-            var applicationClassContainer = applicationClassesEntries.getKey();
-            for (String applicationClass : applicationClassesEntries.getValue()) {
-                MapCursor<URI, EconomicSet<String>> builderClassesEntries = builderClasses.getEntries();
-                while (builderClassesEntries.advance()) {
-                    var builderClassContainer = builderClassesEntries.getKey();
-                    if (builderClassesEntries.getValue().contains(applicationClass)) {
-                        String message = String.format("Class-path entry %s contains class %s. This class is part of the image builder itself (in %s) and must not be passed via -cp.",
-                                        applicationClassContainer, applicationClass, builderClassContainer);
-                        if (!tolerateViolations) {
-                            String errorMessage = String.join(" ", message,
-                                            "This can be caused by a fat-jar that illegally includes svm.jar (or graal-sdk.jar) due to its build-time dependency on it.",
-                                            "As a workaround, %s allows turning this error into a warning. Note that this option is deprecated and will be removed in a future version.");
-                            throw UserError.abort(errorMessage, SubstrateOptionsParser.commandArgument(SubstrateOptions.AllowDeprecatedBuilderClassesOnImageClasspath, "+"));
-                        } else {
-                            LogUtils.warning(message);
-                        }
-                    }
-                }
-            }
-        }
     }
 
     public Set<String> getJavaModuleNamesToInclude() {
@@ -1288,10 +1461,6 @@ public final class NativeImageClassLoaderSupport {
         return preserveSelectors.classpathEntries();
     }
 
-    public Set<String> getClassNamesToPreserve() {
-        return Collections.unmodifiableSet(classNamesToPreserve);
-    }
-
     public void setPreserveAll(ValueWithOrigin<String> valueWithOrigin) {
         this.preserveAllOrigin = valueWithOrigin;
     }
@@ -1305,16 +1474,6 @@ public final class NativeImageClassLoaderSupport {
             }
         }
         dynamicAccessSelectors.addModule(ALL_UNNAMED, origin);
-    }
-
-    public Stream<Class<?>> getClassesToIncludeUnconditionally() {
-        return classesToIncludeUnconditionally.stream()
-                        .sorted(Comparator.comparing(Class::getTypeName));
-    }
-
-    public Stream<Class<?>> getClassesToPreserve() {
-        return classesToPreserve.stream()
-                        .sorted(Comparator.comparing(Class::getTypeName));
     }
 
     public class IncludeSelectors {
@@ -1345,7 +1504,7 @@ public final class NativeImageClassLoaderSupport {
          * them.
          */
         private void verifyClasspathEntriesPresentAndResolve() {
-            Set<Path> resolvedJavaPathsToInclude = new HashSet<>();
+            EconomicSet<Path> resolvedJavaPathsToInclude = EconomicSet.create();
             List<String> missingClassPathEntries = new ArrayList<>();
             classpathEntries.keySet().forEach(requestedCPEntry -> {
                 Optional<Path> optResolvedEntry = toRealPath(requestedCPEntry).findAny();
@@ -1470,17 +1629,55 @@ public final class NativeImageClassLoaderSupport {
     }
 
     /**
-     * Stores a temporary collection of individual class/resource file digests that is updated
-     * during class loading. In particular, {@code PathDigests} objects store and update two
-     * {@link EconomicMap}s, one for classpath entries and the other for modulepath entries. Each
-     * {@link EconomicMap} maps a path entry (i.e., directory/jar) with the list of individual
-     * digests for the files it contains. The order of the individual digests is non-deterministic.
-     * After class loading, the {@code PathDigests} should be aggregated into a list of
+     * Updates the digest without materializing the whole resource in one byte array. The buffer is
+     * filled before each update so the digest does not depend on arbitrary short-read boundaries
+     * from the input stream. This avoids overflowing {@link Integer#MAX_VALUE} for path digest
+     * inputs larger than a single Java byte array can represent.
+     */
+    static void updatePathDigest(DigestBuilder db, InputStream input) throws IOException {
+        byte[] buffer = new byte[PathDigests.FILE_DIGEST_BUFFER_SIZE];
+        int buffered = 0;
+        int bytesRead;
+        while ((bytesRead = input.read(buffer, buffered, buffer.length - buffered)) != -1) {
+            if (bytesRead == 0) {
+                continue;
+            }
+            buffered += bytesRead;
+            if (buffered == buffer.length) {
+                db.update(buffer);
+                buffered = 0;
+            }
+        }
+        if (buffered > 0) {
+            db.update(Arrays.copyOf(buffer, buffered));
+        }
+    }
+
+    /**
+     * Stores a collection of individual class/resource file digests that is updated during class
+     * loading. In particular, {@code PathDigests} objects store and update two
+     * {@link EconomicMap}s, one for class-path entries and the other for module-path entries. Each
+     * {@link EconomicMap} maps a path entry (i.e., URI of a directory/jar) to a list of individual
+     * digests for the files it contains. Each digest is checksum of a file's contents and its name
+     * (i.e. path relative to the directory/jar). The order in which the individual digests are
+     * collected is non-deterministic so the list is sorted when they are
+     * {@linkplain PathDigestEntry#aggregate aggregated} after class loading into a list of
      * {@link PathDigestEntry}.
      */
     private static final class PathDigests {
+        /**
+         * Map from a class-path entry to the list of checksums for the resources loaded via the
+         * entry. Each element of the list is a checksum of a resource's contents and its name.
+         */
         private final EconomicMap<URI, List<String>> cpDigests = EconomicMap.create();
+
+        /**
+         * Map from a module-path entry to the list of checksums for the resources loaded via the
+         * entry. Each element of the list is a checksum of a resource's contents and its name.
+         */
         private final EconomicMap<URI, List<String>> mpDigests = EconomicMap.create();
+
+        private static final int FILE_DIGEST_BUFFER_SIZE = 64 * 1024;
 
         private PathDigests(List<Path> imagecp, List<Path> imagemp) {
             imagecp.stream()
@@ -1491,27 +1688,38 @@ public final class NativeImageClassLoaderSupport {
                             .forEach(path -> mpDigests.put(path, new ArrayList<>()));
         }
 
+        /**
+         * Records the digest for a resource found via a class-path or module-path entry. The
+         * recorded digest is a checksum of the resource's contents and its name.
+         *
+         * @param container the URI of the class-path or module-path entry
+         * @param resource the path the resource relative to {@code container}
+         * @param isJar specifies if the class-path or module-path entry is a jar file
+         * @param digests where to record the digest
+         */
         private static void storePathFileDigest(URI container, String resource, boolean isJar, EconomicMap<URI, List<String>> digests) {
-            byte[] fileContent;
+            DigestBuilder db = new DigestBuilder();
             try {
                 if (isJar) {
                     try (JarFile jarFile = new JarFile(new File(container), true, ZipFile.OPEN_READ, JarFile.runtimeVersion())) {
                         JarEntry jarEntry = jarFile.getJarEntry(resource);
-                        fileContent = jarFile.getInputStream(jarEntry).readAllBytes();
+                        try (InputStream input = jarFile.getInputStream(jarEntry)) {
+                            updatePathDigest(db, input);
+                        }
                     }
                 } else {
                     Path resourcePath = Path.of(container).resolve(resource);
                     if (!resourcePath.toFile().isFile()) {
                         return;
                     }
-                    fileContent = Files.readAllBytes(resourcePath);
+                    try (InputStream input = Files.newInputStream(resourcePath)) {
+                        updatePathDigest(db, input);
+                    }
                 }
             } catch (IOException e) {
                 throw UserError.abort("Image builder cannot read file: " + resource);
             }
 
-            DigestBuilder db = new DigestBuilder();
-            db.update(fileContent);
             db.update(resource.getBytes(StandardCharsets.UTF_8));
             List<String> containerDigests = digests.get(container);
             synchronized (containerDigests) {
@@ -1529,15 +1737,14 @@ public final class NativeImageClassLoaderSupport {
     }
 
     /**
-     * The record type {@link PathDigestEntry} encodes tuples of the form (type, digest, path),
-     * where: - type: is either {@code PathType.cp} or {@code PathType.mp} - digest: is a checksum
-     * which encodes information about every class/resource file part of that path (or reachable
-     * from a symlink part of that path) - path: is the absolute path ponting to the directory/jar
-     * included on the class/module-path. To obtain a list of all {@code PathDigestEntry} objects
-     * corresponding to a particular Native Image build, use the method
-     * {@link NativeImageClassLoaderSupport#computePathEntryDigests()}.
+     * Describes an entry on a class-path or module-path and the checksum of its contents.
+     *
+     * @param type origin of the {@code path} value
+     * @param digest checksum computed from the contents of all files loaded from {@code path}
+     * @param path an absolute file-system path corresponding to an entry on a class-path or
+     *            module-path
      */
-    public record PathDigestEntry(PathType type, String digest, String path) {
+    public record PathDigestEntry(PathType type, String digest, Path path) {
 
         /**
          * Aggregate the contents of {@link PathDigests} to create a list of
@@ -1548,34 +1755,30 @@ public final class NativeImageClassLoaderSupport {
             Objects.requireNonNull(pathDigests, "NativeImageClassLoaderSupport#pathDigests should not be empty for a layered build.");
 
             List<PathDigestEntry> aggregatedDigests = new ArrayList<>();
-            aggregatedDigests.addAll(aggregatePathDigests(pathDigests.getCpDigests(), PathType.cp));
-            aggregatedDigests.addAll(aggregatePathDigests(pathDigests.getMpDigests(), PathType.mp));
+            aggregatedDigests.addAll(aggregate(pathDigests.getCpDigests(), PathType.cp));
+            aggregatedDigests.addAll(aggregate(pathDigests.getMpDigests(), PathType.mp));
             return aggregatedDigests;
         }
 
-        private static List<PathDigestEntry> aggregatePathDigests(EconomicMap<URI, List<String>> pathDigests, PathType type) {
+        private static List<PathDigestEntry> aggregate(EconomicMap<URI, List<String>> pathDigests, PathType type) {
             List<PathDigestEntry> aggregatedDigests = new ArrayList<>();
             var cursor = pathDigests.getEntries();
             while (cursor.advance()) {
-                aggregatedDigests.add(PathDigestEntry.of(type, cursor.getKey().getPath(), cursor.getValue()));
+                DigestBuilder db = new DigestBuilder();
+                cursor.getValue().stream()
+                                .sorted()
+                                .map(d -> d.getBytes(StandardCharsets.UTF_8))
+                                .forEach(db::update);
+                Path path = Path.of(cursor.getKey());
+                String digest = new String(db.digest(), StandardCharsets.UTF_8);
+                aggregatedDigests.add(new PathDigestEntry(type, digest, path));
             }
             return aggregatedDigests;
         }
 
-        private static PathDigestEntry of(PathType type, String path, List<String> digests) {
-            DigestBuilder db = new DigestBuilder();
-            digests.stream()
-                            .sorted()
-                            .map(d -> d.getBytes(StandardCharsets.UTF_8))
-                            .forEach(db::update);
-
-            String aggregatedDigest = new String(db.digest(), StandardCharsets.UTF_8);
-            return new PathDigestEntry(type, aggregatedDigest, path);
-        }
-
         public static PathDigestEntry of(String digestEntry) {
             String[] envVarArr = digestEntry.split(":", 3);
-            return new PathDigestEntry(PathType.valueOf(envVarArr[0]), envVarArr[1], envVarArr[2]);
+            return new PathDigestEntry(PathType.valueOf(envVarArr[0]), envVarArr[1], Path.of(envVarArr[2]));
         }
 
         @Override
@@ -1583,8 +1786,19 @@ public final class NativeImageClassLoaderSupport {
             return type + ":" + digest + ":" + path;
         }
 
+        /**
+         * Constants denoting whether a path originates from a class-path or a module-path
+         * specification.
+         */
         public enum PathType {
+            /**
+             * Denotes a class-path as the origin of a path.
+             */
             cp,
+
+            /**
+             * Denotes a module-path as the origin of a path.
+             */
             mp
         }
     }
